<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wmgps.MenuActivity"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/ErrorTextSupervisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />
    
    <TextView
        android:id="@+id/displayNoOfUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_users_to_monitor" />

    
    <EditText 
        
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_users"
         />
    
    <Button 
        android:id="@+id/switchToSupervisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_supervisor"
        android:onClick="switchToSupervisorMode"/>

</LinearLayout>
