<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wmgps.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.example.wmgps.MainActivity" 
     android:orientation="vertical">

<!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
<!-- 
<uses-permission android:name="android.permission.INTERNET" /> -->
     
     <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1" />

    <TextView
        android:id="@+id/Hidden1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/Hidden11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <TextView
        android:id="@+id/ErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <!--  android:layout_weight="1" use this only if you want a very huge text field to occupy screen -->
    
    <EditText 
        
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
         />

    <EditText 
        
        android:id="@+id/edit_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
         />
    
    

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <EditText 
        android:id="@+id/userNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
         />
    

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidden" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>

</LinearLayout>
 